# jamfgw

./: Cargo.toml  README.md  jamfgw.postman_collection.json
src/: handlers.rs  jamf.rs  main.rs  state.rs
src/handlers/: auth.rs  devices.rs  hello.rs
src/jamf/: computer_inventory.rs  macos_updates.rs
src/utility/: logging.rs
