[package]
name = "jamfgw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework and dependency
axum = "0.5"
tokio = { version = "1.0", features = ["full"] }

# web client
reqwest = { version = "0.11", features = ["json"] }

# (de)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging/tracing
chrono = "0.4"
